# made_cpp

./: CMakeLists.txt  Matrix_n_m.h  Matrix_n_m.tpp  main.c
.github/workflow/: ci.yml
.github/workflows/: ci.yml
homerwork_1/: CMakeLists.txt  main  main.c
homerwork_1/test/: CMakeLists.txt  test_weather.cpp
homerwork_1/weather/: CMakeLists.txt  weather.c  weather.h
homerwork_2/: CMakeLists.txt  Matrix_n_m.hpp  Matrix_n_m.tpp  main  main.cpp  test.cpp
homerwork_3/: CMakeLists.txt  main  main.cpp  set.hpp  test.cpp
homerwork_4/: CMakeLists.txt  main.cpp
homerwork_4/boost_1_80_0/: b2  project-config.jam
homerwork_4/boost_1_80_0/bin.v2/: project-cache.jam
homerwork_4/boost_1_80_0/bin.v2/libs/nowide/config/gcc-11/release/link-static/threading-multi/visibility-hidden/: lfs_support
homerwork_4/boost_1_80_0/bin.v2/standalone/ac/gcc-11/release/link-static/threading-multi/visibility-hidden/: bz2  lzma  z
homerwork_4/boost_1_80_0/bin.v2/standalone/ac/gcc-11/release/threading-multi/visibility-hidden/: bz2  lzma  z
homerwork_4/lib/: CMakeLists.txt  func.cpp  func.h  help_func.cpp
test/: CMakeLists.txt  test_weather.cpp
